{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 15,
  "lineage": "b1ffca7a-0795-be82-acc4-5aae9be5d9bd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005ee605913429d22",
            "arn": "arn:aws:ec2:us-east-1:971422703204:elastic-ip/eipalloc-005ee605913429d22",
            "domain": "vpc",
            "id": "eipalloc-005ee605913429d22",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-174-129-194-29.compute-1.amazonaws.com",
            "public_ip": "174.129.194.29",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971422703204:internet-gateway/igw-0a4fde97ac5ed5363",
            "id": "igw-0a4fde97ac5ed5363",
            "owner_id": "971422703204",
            "tags": {
              "Name": "captaintacticus-igw"
            },
            "tags_all": {
              "Name": "captaintacticus-igw"
            },
            "vpc_id": "vpc-04c16d4f52eb52674"
          },
          "dependencies": [
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005ee605913429d22",
            "association_id": "eipassoc-0c9149bea7ea08544",
            "connectivity_type": "public",
            "id": "nat-04539f36c1d4b8838",
            "network_interface_id": "eni-0f36f8c54ff525817",
            "private_ip": "10.0.1.210",
            "public_ip": "174.129.194.29",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0092f5c0ae41384ca",
            "tags": {
              "Name": "captaintacticus-nat"
            },
            "tags_all": {
              "Name": "captaintacticus-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet_1",
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971422703204:route-table/rtb-014ac46d5e86608ee",
            "id": "rtb-014ac46d5e86608ee",
            "owner_id": "971422703204",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04539f36c1d4b8838",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "captaintacticus-private-rt"
            },
            "tags_all": {
              "Name": "captaintacticus-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c16d4f52eb52674"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet_1",
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971422703204:route-table/rtb-0ebd7d8acf0d2f34f",
            "id": "rtb-0ebd7d8acf0d2f34f",
            "owner_id": "971422703204",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a4fde97ac5ed5363",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "captaintacticus-public-rt"
            },
            "tags_all": {
              "Name": "captaintacticus-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c16d4f52eb52674"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e659e50a1175fcc5",
            "route_table_id": "rtb-014ac46d5e86608ee",
            "subnet_id": "subnet-000fe5e1e224b060f"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060770e746c9548d5",
            "route_table_id": "rtb-014ac46d5e86608ee",
            "subnet_id": "subnet-001c3b307baa1329d"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0300a3c64d49ad2d3",
            "route_table_id": "rtb-0ebd7d8acf0d2f34f",
            "subnet_id": "subnet-0092f5c0ae41384ca"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0484d2794623b6840",
            "route_table_id": "rtb-0ebd7d8acf0d2f34f",
            "subnet_id": "subnet-02063b8b275d228ac"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971422703204:subnet/subnet-000fe5e1e224b060f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000fe5e1e224b060f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "971422703204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "captaintacticus-private-1"
            },
            "tags_all": {
              "Name": "captaintacticus-private-1"
            },
            "vpc_id": "vpc-04c16d4f52eb52674"
          },
          "dependencies": [
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971422703204:subnet/subnet-001c3b307baa1329d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001c3b307baa1329d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "971422703204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "captaintacticus-private-2"
            },
            "tags_all": {
              "Name": "captaintacticus-private-2"
            },
            "vpc_id": "vpc-04c16d4f52eb52674"
          },
          "dependencies": [
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971422703204:subnet/subnet-0092f5c0ae41384ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0092f5c0ae41384ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "971422703204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "captaintacticus-public-1"
            },
            "tags_all": {
              "Name": "captaintacticus-public-1"
            },
            "vpc_id": "vpc-04c16d4f52eb52674"
          },
          "dependencies": [
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971422703204:subnet/subnet-02063b8b275d228ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02063b8b275d228ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "971422703204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "captaintacticus-public-2"
            },
            "tags_all": {
              "Name": "captaintacticus-public-2"
            },
            "vpc_id": "vpc-04c16d4f52eb52674"
          },
          "dependencies": [
            "aws_vpc.captaintacticus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "captaintacticus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971422703204:vpc/vpc-04c16d4f52eb52674",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a68079198f0e0c51",
            "default_route_table_id": "rtb-0b2b57a75da42a508",
            "default_security_group_id": "sg-0d8f5d0b7abdd8908",
            "dhcp_options_id": "dopt-02a424dd0ad7f08ab",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04c16d4f52eb52674",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b2b57a75da42a508",
            "owner_id": "971422703204",
            "tags": {
              "Name": "captaintacticus"
            },
            "tags_all": {
              "Name": "captaintacticus"
            }
          }
        }
      ]
    }
  ]
}